--- a/npk.html
+++ b/npk.html
@@ -230,9 +230,9 @@ input[type="submit"] {
 
             document.getElementById("totalCost").value = totalCost;
             // Update displayed results in the separate div element
-            document.getElementById("displayIdealNitrogen").textContent = idealNitrogen;
-            document.getElementById("displayIdealPhosphorous").textContent = idealPhosphorous;
-            document.getElementById("displayIdealPotassium").textContent = idealPotassium;
+            // document.getElementById("displayIdealNitrogen").textContent = idealNitrogen;
+            // document.getElementById("displayIdealPhosphorous").textContent = idealPhosphorous;
+            // document.getElementById("displayIdealPotassium").textContent = idealPotassium;
 
             document.getElementById("displayNitrogenDifference").textContent = nitrogenDifference;
             document.getElementById("displayPhosphorousDifference").textContent = phosphorousDifference;
