idk what to say

--- a/wheat.html
+++ b/wheat.html
@@ -212,8 +212,8 @@ input[type="submit"] {
 
 
             // Update hidden fields
-            let email = document.getElementsByClassName("netlify-identity-user");
-            let email2 = document.getElementById("email");
+            var email = document.getElementsByClassName("netlify-identity-user");
+            var email2 = document.getElementById("email");
             email2.innerHTML = email.textContent
 
             document.getElementById("idealNitrogen").value = idealNitrogen;
