--- a/hindi/npk.html
+++ b/hindi/npk.html
@@ -105,8 +105,8 @@
 <body>
 <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
   <div class="container">
-    <a href="wheat.html" class="button">NPK Calculator For Wheat</a>
+    <a href="wheat.html" class="button">गेहूं के लिए एनपीके कैलकुलेटर</a>
   </div>
-  <p class="coming-soon">More coming soon</p>
+  <p class="coming-soon">और जल्द ही आ रहा</p>
 </body>
 </html>
