--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Khet Guru</title>
   <script type="text/javascript">
+  function redirect() {
+      window.location.href = "/hindi";
+    }
 	document.addEventListener("DOMContentLoaded", function() {
 	netlifyIdentity.on("init", function(user) {
 	  if (user) {
@@ -64,5 +67,6 @@
 </head>
 <body>
   <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
+  <button onclick="redirect()">हिंदी में देखें</button>
 </body>
 </html>
