--- a/hindi/wheat.html
+++ b/hindi/wheat.html
@@ -271,13 +271,13 @@ input[type="submit"] {
         <label for="landArea">भूमि क्षेत्र दर्ज करें (हेक्टेयर में):</label>
         <input type="number" id="landArea" name="landArea" step="0.01"><br>
 
-        <label for="nitrogen">Available Nitrogen in soil (kg/ha):</label>
+        <label for="nitrogen">मिट्टी में उपलब्ध नाइट्रोजन (किलो/हेक्टेयर):</label>
         <input type="number" id="nitrogen" name="nitrogen" step="0.01">
         <br>
-        <label for="phosphorous">Available Phosphorous in soil (kg/ha):</label>
+        <label for="phosphorous">मिट्टी में उपलब्ध फास्फोरस (किलो/हेक्टेयर):</label>
         <input type="number" id="phosphorous" name="phosphorous" step="0.01">
         <br>
-        <label for="potassium">Available Potassium in soil (kg/ha):</label>
+        <label for="potassium">मिट्टी में उपलब्ध पोटेशियम (किलो/हेक्टेयर):</label>
         <input type="number" id="potassium" name="potassium" step="0.01">
         <br>
         <br>
