--- a/hindi/index.html
+++ b/hindi/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>खेत गुरु</title>
   <script type="text/javascript">
+    document.getElementsByClassName("netlify-identity-item.netlify-identity-user-details")[1].innerText = "लॉग इन ईमेल:";
   function redirect() {
       window.location.href = "https://khetguru.netlify.app";
   }
@@ -63,6 +64,18 @@
       background-color: #007a70;
       text-decoration: none;
     }
+    button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+}
   </style>
 </head>
 <body>
