--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Khet Guru</title>
   <script type="text/javascript">
+
+  document.getElementsByClassName("netlify-identity-item.netlify-identity-user-details")[1].innerText = "लॉग इन ईमेल:";
+
   function redirect() {
       window.location.href = "/hindi";
     }
@@ -63,6 +66,18 @@
       background-color: #007a70;
       text-decoration: none;
     }
+    button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+}
   </style>
 </head>
 <body>
