--- a/hindi/wheat.html
+++ b/hindi/wheat.html
@@ -322,7 +322,7 @@ input[type="submit"] {
           
           <p>अनुमानित लागत: ₹<span id="displayTotalCost"></span></p>
 
-          <input type="submit" value="Save results">
+          <input type="submit" value="परिणाम जांचें">
           <p>(तकनीकी समस्याओं के कारण हम वर्तमान में उपयोगकर्ताओं के लिए बाद में पहुंच के लिए परिणामों को सहेजने में सक्षम नहीं हैं, लेकिन हम उन्हें अपने बैकएंड में संग्रहीत करते हैं)</p>
 
       </div>
