Final commit before submission

--- a/hindi/npk.html
+++ b/hindi/npk.html
@@ -53,7 +53,7 @@
 
     body {
       text-align: center;
-      background-color: #f1f1f1;
+      background-color: #e5ffe6;
       font-family: Arial, sans-serif;
     }
     
