--- a/index.html
+++ b/index.html
@@ -76,10 +76,24 @@
     cursor: pointer;
     border-radius: 4px;
 }
+    body{
+      background-image: url("khetguru.jpeg");
+      background-repeat: no-repeat;
+      background-color: #e5ffe6;
+    }
   </style>
 </head>
 <body>
   <button onclick="redirect()">हिंदी में देखें</button>
-  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
+  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <div style="text-align: center;">
+    <h2>Please sign up or log in to use our app</h2>
+    <h3>We are aware of a few bugs on our app, mainly</h3>
+    <ul>
+      <li>1. The login and signup buttons generate twice</li>
+      <li>2. Logging out while using the app may not redirect the user back to sign up page</li>
+      <li>3. The main "KHETGURU" text is not centered properly</li>
+    </ul>
+  </div>
 </body>
 </html>
