--- a/hindi/index.html
+++ b/hindi/index.html
@@ -75,10 +75,24 @@
     cursor: pointer;
     border-radius: 4px;
 }
+body{
+      background-image: url("khetguru.jpeg");
+      background-repeat: no-repeat;
+      background-color: #e5ffe6;
+    }
   </style>
 </head>
 <body>
   <button onclick="redirect()">Switch to English</button>
   <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
+  <div style="text-align: center;">
+    <h2>कृपया हमारे ऐप का उपयोग करने के लिए साइन अप करें या लॉग इन करें</h2>
+    <h3>हम मुख्य रूप से अपने ऐप पर कुछ बग के बारे में जानते हैं, जैसे-</h3>
+    <ul>
+      <li>1. लॉगिन और साइनअप बटन दो बार उत्पन्न होते हैं</li>
+      <li>2. ऐप का उपयोग करते समय लॉग आउट करने से उपयोगकर्ता वापस साइन अप पेज पर रीडायरेक्ट नहीं हो सकता है</li>
+      <li>3. मुख्य "KHETGURU" पाठ ठीक से केन्द्रित नहीं है</li>
+    </ul>
+  </div>
 </body>
 </html>
