--- a/hindi/wheat.html
+++ b/hindi/wheat.html
@@ -8,7 +8,7 @@ body, html{
     font-family: Arial, sans-serif;
     width: 100%;
     height: 100%;
-    background-color: #f2f2f2;
+    background-color: #e5ffe6;
     margin: 0;
     padding: 20px;
 }
@@ -264,7 +264,7 @@ input[type="submit"] {
   <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
     <h1>खेत गुरु गेहूं मृदा एनपीके कैलकुलेटर</h1>
     <!--<form action="submit.php" method="post">-->
-        <form name="npkValue" netlify>        
+        <form name="npkValueHindi" netlify>        
         <h4>आदर्श नाइट्रोजन सामग्री: 120 (किलो/हेक्टेयर)</h4>
         <h4>आदर्श फास्फोरस सामग्री: 60 (किलो/हेक्टेयर)</h4>
         <h4>आदर्श पोटेशियम सामग्री: 40 (किलो/हेक्टेयर)</h4>
