--- a/wheat.html
+++ b/wheat.html
@@ -8,7 +8,7 @@ body, html{
     font-family: Arial, sans-serif;
     width: 100%;
     height: 100%;
-    background-color: #f2f2f2;
+    background-color: #e5ffe6;
     margin: 0;
     padding: 20px;
 }
