--- a/hindi/index.html
+++ b/hindi/index.html
@@ -84,7 +84,7 @@ body{
 </head>
 <body>
   <button onclick="redirect()">Switch to English</button>
-  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
+  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <div style="text-align: center;">
     <h2>कृपया हमारे ऐप का उपयोग करने के लिए साइन अप करें या लॉग इन करें</h2>
     <h3>हम मुख्य रूप से अपने ऐप पर कुछ बग के बारे में जानते हैं, जैसे-</h3>
