--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       background-image: url("khetguru.jpeg");
       background-repeat: no-repeat;
       background-color: #e5ffe6;
+      background-size: cover;
     }
   </style>
 </head>
