--- a/hindi/index.html
+++ b/hindi/index.html
@@ -79,6 +79,8 @@ body{
       background-image: url("khetguru.jpeg");
       background-repeat: no-repeat;
       background-color: #e5ffe6;
+      background-size: cover;
+
     }
   </style>
 </head>
