Fixed double generation of login buttons

--- a/index.html
+++ b/index.html
@@ -1,99 +1,93 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Khet Guru</title>
-  <script type="text/javascript">
+  <head>
+    <title>Khet Guru</title>
+    <script type="text/javascript">
+      function redirect() {
+        window.location.href = "/hindi";
+      }
+      document.addEventListener("DOMContentLoaded", function () {
+        netlifyIdentity.on("init", function (user) {
+          if (user) {
+            window.location.href = "npk.html";
+          }
+        });
+      });
+    </script>
+    <script
+      type="text/javascript"
+      src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+    ></script>
+    <style>
+      [data-netlify-identity-menu] ul {
+        display: flex;
+      }
 
-  function redirect() {
-      window.location.href = "/hindi";
-    }
-	document.addEventListener("DOMContentLoaded", function() {
-	netlifyIdentity.on("init", function(user) {
-	  if (user) {
-		// User is logged in
-		// Redirect to another webpage
-		window.location.href = "npk.html";
-	  } else {
-		// User is not logged in
-		// Perform any other desired actions
-		console.log("User is not logged in");
-	  }
-	});
-  
-	netlifyIdentity.init();
-  });
-	</script>
-	<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-   <style>
-    [data-netlify-identity-menu] ul {
-      display: flex;
-    }
+      [data-netlify-identity-menu] li:first-child {
+        margin-right: 16px;
+      }
 
-    [data-netlify-identity-menu] li:first-child {
-      margin-right: 16px;
-    }
+      [data-netlify-identity-menu] li {
+        list-style-type: none;
+        display: inline-block;
+      }
 
-    [data-netlify-identity-menu] li {
-      list-style-type: none;
-      display: inline-block;
-    }
+      [data-netlify-identity-menu] a {
+        display: block;
+        position: relative;
+        width: 192px;
+        height: 24px;
+        padding: 8px;
+        outline: 0;
+        cursor: pointer;
+        border: 2px solid #007a70;
+        border-radius: 4px;
+        background-color: #00ad9f;
+        color: white;
+        transition: background-color 0.2s ease;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        text-align: center;
+        text-decoration: none;
+        white-space: nowrap;
+      }
 
-    [data-netlify-identity-menu] a {
-      display: block;
-      position: relative;
-      width: 192px;
-      height: 24px;
-      padding: 8px;
-      outline: 0;
-      cursor: pointer;
-      border: 2px solid #007a70;
-      border-radius: 4px;
-      background-color: #00ad9F;
-      color: white;
-      transition: background-color 0.2s ease;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 24px;
-      text-align: center;
-      text-decoration: none;
-      white-space: nowrap;
-    }
-
-    [data-netlify-identity-menu] a:hover,
-    [data-netlify-identity-menu] a:focus {
-      background-color: #007a70;
-      text-decoration: none;
-    }
-    button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-    body{
-      background-image: url("khetguru.jpeg");
-      background-repeat: no-repeat;
-      background-color: #e5ffe6;
-      background-size: cover;
-    }
-  </style>
-</head>
-<body>
-  <button onclick="redirect()">हिंदी में देखें</button>
-  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <div style="text-align: center;">
-    <h2>Please sign up or log in to use our app</h2>
-    <h3>We are aware of a few bugs on our app, mainly</h3>
-    <ul>
-      <li>1. The login and signup buttons generate twice</li>
-      <li>2. Logging out while using the app may not redirect the user back to sign up page</li>
-    </ul>
-  </div>
-</body>
+      [data-netlify-identity-menu] a:hover,
+      [data-netlify-identity-menu] a:focus {
+        background-color: #007a70;
+        text-decoration: none;
+      }
+      button {
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+      }
+      body {
+        background-image: url("khetguru.jpeg");
+        background-repeat: no-repeat;
+        background-color: #e5ffe6;
+        background-size: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <button onclick="redirect()">हिंदी में देखें</button>
+    <div
+      style="display: flex; justify-content: center"
+      data-netlify-identity-menu
+    ></div>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <div style="text-align: center">
+      <h2>Please sign up or log in to use our app</h2>
+      </ul>
+    </div>
+  </body>
 </html>
