--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           }
         });
       };
-      document.addEventListener("DOMContentLoaded", userCheck())
+      document.addEventListener("DOMContentLoaded", userCheck)
       setInterval(userCheck, 2000)
     </script>
     <script
