--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
         window.location.href = "/hindi";
       }
       function userCheck() {
-        netlifyIdentity.on("init", function (user) {
-          if (user) {
-            window.location.href = "npk.html";
-          }
-        });
-      };
-      document.addEventListener("DOMContentLoaded", userCheck)
-      setInterval(userCheck, 2000)
+        if (netlifyIdentity.currentUser()) {
+          window.location.href = "npk.html";
+        }
+      }
+      document.addEventListener("DOMContentLoaded", userCheck);
+      setInterval(userCheck, 2666);
     </script>
     <script
       type="text/javascript"
