Added class khetGuru to netlify identity script to be accessed by android webview

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script
       type="text/javascript"
       src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+      class = "khetGuru"
     ></script>
     <style>
       [data-netlify-identity-menu] ul {
