--- a/npk.html
+++ b/npk.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>NPK Calculators</title>
     <script
       type="text/javascript"
