--- a/wheat.html
+++ b/wheat.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>Khet Guru Soil NPK Calculator for Wheat</title>
     <style>
       body,
