--- a/wheat.html
+++ b/wheat.html
@@ -10,12 +10,13 @@
         width: 100%;
         height: 100%;
         background-color: #e5ffe6;
-        margin: 0;
+        margin: auto;
         padding: 20px;
       }
 
       [data-netlify-identity-menu] ul {
-        display: flex;
+        display: flex; 
+        margin: auto;
       }
 
       [data-netlify-identity-menu] li:first-child {
