Revert "Centering elements"
This reverts commit 38f371512fa4b02015b68f4458831db71dd4d9aa.

--- a/wheat.html
+++ b/wheat.html
@@ -10,13 +10,12 @@
         width: 100%;
         height: 100%;
         background-color: #e5ffe6;
-        margin: auto;
+        margin: 0;
         padding: 20px;
       }
 
       [data-netlify-identity-menu] ul {
-        display: flex; 
-        margin: auto;
+        display: flex;
       }
 
       [data-netlify-identity-menu] li:first-child {
