--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <style>
       [data-netlify-identity-menu] ul {
         display: flex;
-        margin: auto;
       }
 
       [data-netlify-identity-menu] li:first-child {
@@ -33,12 +32,10 @@
       [data-netlify-identity-menu] li {
         list-style-type: none;
         display: inline-block;
-        margin: auto;
       }
 
       [data-netlify-identity-menu] a {
         display: block;
-        margin: auto;
         position: relative;
         width: 192px;
         height: 24px;
@@ -61,7 +58,6 @@
       [data-netlify-identity-menu] a:hover,
       [data-netlify-identity-menu] a:focus {
         background-color: #007a70;
-        margin: auto;
         text-decoration: none;
       }
       button {
@@ -78,7 +74,6 @@
       }
       body {
         background-image: url("khetguru.jpeg");
-        margin: auto;
         background-repeat: no-repeat;
         background-color: #e5ffe6;
         background-size: cover;
@@ -92,8 +87,8 @@
       data-netlify-identity-menu
     ></div>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <div style="text-align: center; margin: auto;">
-      <h2 style="margin: auto;">Please sign up or log in to use our app</h2>
+    <div style="text-align: center">
+      <h2>Please sign up or log in to use our app</h2>
       </ul>
     </div>
   </body>
