--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 
-<style>
-    body {
-        background-color: aquamarine;
-    }
-</style>
+<script
+  type="text/javascript"
+  src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+></script>
+
+<script
+  type="text/javascript"
+  src="script.js"
+></script>
 
 <html>
-    <body>
-        <h1>Hi</h1>
-    </body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khetguru</title>
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="https://khetguru.netlify.app">Home</a></li>
+          <li><a href="/NPK Calculator/">NPK Calculator</a></li>
+          <li class="right"><a href="#">हिंदी में देखें</a></li>
+          <li class="right"><a data-netlify-identity-button></a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="logo">
+      <h1>Welcome to Khetguru</h1>
+    </div>
+    <section class="main-stuff">
+      <h2>Please login or signup to continue</h2>
+      <p>
+        Khet Guru is a revolutionary tool that puts the power of smart
+        agriculture directly into the hands of farmers. Using soil fertility
+        data, Khet Guru provides farmers with the essential knowledge needed to
+        make informed decisions about crop selection, planting times, and
+        fertilizer use.
+      </p>
+      <p>
+        No more guesswork. No more uncertainty. Khet Guru takes into account
+        your location, the time of year, and the local climate, offering
+        tailored recommendations for crops that are most likely to thrive in
+        your specific conditions. But it doesn't stop there. Khet Guru goes a
+        step further, calculating the precise amount of fertilizer you'll need
+        and even estimating the associated costs.
+      </p>
+      <p>With Khet Guru, you're not just farming; you're farming smart.</p>
+    </section>
+  </body>
 </html>
