--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
@@ -30,6 +31,7 @@
     <h4>Ideal Phosphorous Content: 60 (kg/ha)</h4>
     <h4>Ideal Potassium Content: 40 (kg/ha)</h4>
 
+    <label for="state">State:</label>
     <select name="state" id="state" class="form-control" required>
       <option id="" disabled selected>Select your state</option>
       <option id="Andhra Pradesh">Andhra Pradesh</option>
@@ -70,19 +72,40 @@
       <option id="West Bengal">West Bengal</option>
     </select>
     <br><br>
-    <label for="landArea">Enter land area (in hectares):</label>
-    <input type="number" id="landArea" name="landArea" step="0.01" required />
+
+    <label for="season">Season:</label>
+    <select name="season" id="season" class="form-control" required>
+      <option id="" disabled selected>Select your state</option>
+      <option id="rabi">Rabi</option>
+      <option id="kharif">Kharif</option>
+      <option id="zaid">Zaid</option>
+    </select>
+    <br><br>
+
+    <label for="landArea">Land area (in hectares):</label>
+    <input type="number" id="landArea" name="landArea" min="0" step="0.01" required />
+    <br><br>
+
+    <label for="phInput">pH value of soil (0-14): </label>
+    <input type="number" id="phInput" name="phInput" min="0" max="14" step="0.1" required />
+    <br><br>
+
+    <label for="moisture">Soil moisture:</label>
+    <input type="number" id="moisture" name="moisture" min="0" step="0.01" required />
     <br><br>
 
     <label for="nitrogen">Available Nitrogen in soil (kg/ha):</label>
-    <input type="number" id="nitrogen" name="nitrogen" step="0.01" required />
+    <input type="number" id="nitrogen" name="nitrogen" min="0" step="0.01" required />
     <br><br>
+
     <label for="phosphorous">Available Phosphorous in soil (kg/ha):</label>
-    <input type="number" id="phosphorous" name="phosphorous" step="0.01" required />
+    <input type="number" id="phosphorous" name="phosphorous" min="0" step="0.01" required />
     <br><br>
+
     <label for="potassium">Available Potassium in soil (kg/ha):</label>
-    <input type="number" id="potassium" name="potassium" step="0.01" required />
+    <input type="number" id="potassium" name="potassium" min="0" step="0.01" required />
     <br><br>
+
     <button type="button" onclick="calculate()">Check requirements</button>
     <br><br>
 
@@ -107,7 +130,9 @@
     <div id="resultsContainer" style="display: none">
       <h3>Calculated Results:</h3>
 
-      <p>Nitrogen Deficit: <span id="displayNitrogenDifference"></span> kg</p>
+      <p>
+        Nitrogen Deficit: <span id="displayNitrogenDifference"></span> kg
+      </p>
       <p>
         Phosphorous Deficit:
         <span id="displayPhosphorousDifference"></span> kg
