--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
   <h1>NPK Calculator</h1>
-  <form name="npkValue" netlify>
+  <form name="values" netlify>
 
     <input type="hidden" id="email" name="email" />
 
