--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -23,9 +23,11 @@
     </nav>
   </header>
   <h1>NPK Calculator</h1>
-  <form name="values" netlify>
+  <form name="soilSensorValues" netlify>
 
-    <input type="hidden" id="email" name="email" />
+    <label for="email">Email:</label>
+    <input id="email" name="email" readonly/>
+    <br><br>
 
     <h4>Ideal Nitrogen Content: 120 (kg/ha)</h4>
     <h4>Ideal Phosphorous Content: 60 (kg/ha)</h4>
