--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -23,10 +23,10 @@
     </nav>
   </header>
   <h1>NPK Calculator</h1>
-  <form name="soilSensorValues" netlify>
+  <form name="soilSensorValues" method="POST" netlify>
 
     <label for="email">Email:</label>
-    <input id="email" name="email" readonly/>
+    <input id="email" name="email" class="form-control" readonly/>
     <br><br>
 
     <h4>Ideal Nitrogen Content: 120 (kg/ha)</h4>
