--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
   <h1>NPK Calculator</h1>
-  <form name="soilSensorValues" method="POST" netlify>
+  <form name="SoilSensorValues" netlify>
 
     <label for="email">Email:</label>
     <input id="email" name="email" class="form-control" readonly/>
