--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -26,7 +26,7 @@
   <form name="SoilSensorValues" netlify>
 
     <label for="email">Email:</label>
-    <input id="email" name="email" class="form-control" readonly/>
+    <input type="text" id="email" name="email" class="form-control" readonly required/>
     <br><br>
 
     <h4>Ideal Nitrogen Content: 120 (kg/ha)</h4>
