Fix for android top bar clip

--- a/NPKCalculator/index.html
+++ b/NPKCalculator/index.html
@@ -29,10 +29,6 @@
     <input type="text" id="email" name="email" class="form-control" readonly required/>
     <br><br>
 
-    <h4>Ideal Nitrogen Content: 120 (kg/ha)</h4>
-    <h4>Ideal Phosphorous Content: 60 (kg/ha)</h4>
-    <h4>Ideal Potassium Content: 40 (kg/ha)</h4>
-
     <label for="state">State:</label>
     <select name="state" id="state" class="form-control" required>
       <option id="" disabled selected>Select your state</option>
@@ -77,7 +73,7 @@
 
     <label for="season">Season:</label>
     <select name="season" id="season" class="form-control" required>
-      <option id="" disabled selected>Select your state</option>
+      <option id="" disabled selected>Select season</option>
       <option id="rabi">Rabi</option>
       <option id="kharif">Kharif</option>
       <option id="zaid">Zaid</option>
