--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     </nav>
   </header>
   <div class="logo">
-    <h1>Welcome to Khetguru</h1>
+    <h1 class="welcome">Welcome to Khetguru</h1>
+    <h1>Please login or signup to continue</h1>
   </div>
   <section class="main-stuff">
-    <h2>Please login or signup to continue</h2>
+    
     <p>
       Khet Guru is a revolutionary tool that puts the power of smart
       agriculture directly into the hands of farmers. Using soil fertility
