--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="https://khetguru.netlify.app">Home</a></li>
-        <li><a href="/NPKCalculator/">NPK Calculator</a></li>
+        <li><a href="/soilcalculator/">Soil Calculator</a></li>
         <li class="right"><a href="#">हिंदी में देखें</a></li>
         <li class="right"><a data-netlify-identity-button></a></li>
       </ul>
