--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
   </header>
-  <h1>NPK Calculator</h1>
+  <h1>Soil Calculator</h1>
   <form name="SoilSensorValues" netlify>
 
     <label for="email">Email:</label>
