--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -29,7 +29,7 @@
     <input type="text" id="email" name="email" class="form-control" readonly required/>
     <br><br>
 
-    <label for="state">State:</label>
+    <!-- <label for="state">State:</label>
     <select name="state" id="state" class="form-control" required>
       <option id="" disabled selected>Select your state</option>
       <option id="Andhra Pradesh">Andhra Pradesh</option>
@@ -69,14 +69,13 @@
       <option id="Uttarakhand">Uttarakhand</option>
       <option id="West Bengal">West Bengal</option>
     </select>
-    <br><br>
+    <br><br> -->
 
     <label for="season">Season:</label>
     <select name="season" id="season" class="form-control" required>
-      <option id="" disabled selected>Select season</option>
+      <option id="" disabled selected>Select cropping season</option>
       <option id="rabi">Rabi</option>
       <option id="kharif">Kharif</option>
-      <option id="zaid">Zaid</option>
     </select>
     <br><br>
 
@@ -88,7 +87,7 @@
     <input type="number" id="phInput" name="phInput" min="0" max="14" step="0.1" required />
     <br><br>
 
-    <label for="moisture">Soil moisture:</label>
+    <label for="moisture">Soil TDS level (ppm):</label>
     <input type="number" id="moisture" name="moisture" min="0" step="0.01" required />
     <br><br>
 
@@ -127,6 +126,10 @@
 
     <div id="resultsContainer" style="display: none">
       <h3>Calculated Results:</h3>
+
+      <p>
+        Recommended crop: <span id="finalCrop"></span>
+      </p>
 
       <p>
         Nitrogen Deficit: <span id="displayNitrogenDifference"></span> kg
