More UI changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       </ul>
     </nav>
   </header>
+  <h1 class="welcome"> . </h1>
   <div class="logo">
-    <h1 class="welcome">Welcome to Khetguru</h1>
+    <h1>Welcome to Khetguru</h1>
     <h1>Please login or signup to continue</h1>
   <section class="main-stuff">
     
