Added images of crops

--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -131,15 +131,17 @@
         Recommended crop: <span id="finalCrop"></span>
       </p>
 
+      <img id="img">
+
       <p>
-        Nitrogen Deficit: <span id="displayNitrogenDifference"></span> kg
+        Total Nitrogen Deficit: <span id="displayNitrogenDifference"></span> kg
       </p>
       <p>
-        Phosphorous Deficit:
+        Total Phosphorous Deficit:
         <span id="displayPhosphorousDifference"></span> kg
       </p>
       <p>
-        Potassium Deficit: <span id="displayPotassiumDifference"></span> kg
+        Total Potassium Deficit: <span id="displayPotassiumDifference"></span> kg
       </p>
 
       <p>
