Added dropdown menu

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="https://khetguru.netlify.app">Home</a></li>
-        <li><a href="/soilcalculator/">Soil Calculator</a></li>
+      <ul class="navul">
+        <li class="left"><a href="https://khetguru.netlify.app">Home</a></li>
+        <li class="left">
+          <a href="#">Tools</a>
+          <ul class="dropdown-content">
+            <li><a href="/soilcalculator/">Soil Calculator</a></li>
+            <li><a href="/forum/">Forum</a></li>
+          </ul>
+        </li>
         <li class="right"><a href="#">हिंदी में देखें</a></li>
         <li class="right"><a data-netlify-identity-button></a></li>
       </ul>
