--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-      <ul>
+      <ul class="navul">
         <li><a href="https://khetguru.netlify.app">Home</a></li>
         <li><a href="/soilcalculator/">Soil Calculator</a></li>
         <li class="right"><a href="#">हिंदी में देखें</a></li>
