Made dropdown menu for touchscreen

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <ul class="navul">
         <li class="left"><a href="https://khetguru.netlify.app">Home</a></li>
         <li class="left">
-          <a href="#">Tools</a>
-          <ul class="dropdown-content">
+          <a id="tools-dropdown" style="cursor: pointer;">Tools</a>
+          <ul id="tools-dropdown-content" class="dropdown-content">
             <li><a href="/soilcalculator/">Soil Calculator</a></li>
             <li><a href="/forum/">Forum</a></li>
           </ul>
