--- a/forum/index.html
+++ b/forum/index.html
@@ -1,1 +1,35 @@
-<h1 style="text-align: center;">Forum to be created</h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script type="text/javascript" src="forumScript.js"></script>
+    <link rel="stylesheet" href="forumStyle.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khetguru</title>
+  </head>
+
+<body>
+    <header>
+        <nav>
+          <ul class="navul">
+            <li class="left"><a href="https://khetguru.netlify.app">Home</a></li>
+            <li class="left">
+              <a id="tools-dropdown" style="cursor: pointer;">Tools</a>
+              <ul id="tools-dropdown-content" class="dropdown-content">
+                <li><a href="/soilcalculator/">Soil Calculator</a></li>
+                <li><a href="/forum/">Khetu Forum</a></li>
+              </ul>
+            </li>
+            <li class="right"><a href="#">हिंदी में देखें</a></li>
+            <li class="right"><a data-netlify-identity-button></a></li>
+          </ul>
+        </nav>
+      </header>
+
+    <h1 style="text-align: center; margin-top: 50px;">Forum to be created</h1>
+</body>
+
+</html>
