--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a id="tools-dropdown" style="cursor: pointer;">Tools</a>
           <ul id="tools-dropdown-content" class="dropdown-content">
             <li><a href="/soilcalculator/">Soil Calculator</a></li>
-            <li><a href="/forum/">Forum</a></li>
+            <li><a href="/forum/">Khetu Forum</a></li>
           </ul>
         </li>
         <li class="right"><a href="#">हिंदी में देखें</a></li>
