--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <p>
         With Khet Guru, you're not just farming; you're farming smart.
       </p>
+      <a href="https://www.example.com" target="_blank">Example</a>
     </section>
   </div>
 </body>
