--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -77,6 +77,14 @@
     </select>
     <br><br> -->
 
+    <!--<label for="date">Date:</label>
+    <input type="date" id="date" name="date">
+    <br><br>
+
+    <label for="season">Season:</label>
+    <input name="season" id="season" class="form-control" required>
+    <br><br>-->
+
     <label for="season">Season:</label>
     <select name="season" id="season" class="form-control" required>
       <option id="" disabled selected>Select cropping season</option>
@@ -93,8 +101,8 @@
     <input type="number" id="phInput" name="phInput" min="0" max="14" step="0.1" required />
     <br><br>
 
-    <label for="moisture">Soil TDS level (ppm):</label>
-    <input type="number" id="moisture" name="moisture" min="0" step="0.01" required />
+    <label for="tdsInput">Soil TDS level (ppm):</label>
+    <input type="number" id="tdsInput" name="tdsInput" min="0" step="0.01" required />
     <br><br>
 
     <label for="nitrogen">Available Nitrogen in soil (kg/ha):</label>
@@ -109,7 +117,7 @@
     <input type="number" id="potassium" name="potassium" min="0" step="0.01" required />
     <br><br>
 
-    <button type="button" onclick="calculate()">Check requirements</button>
+    <button type="button" onclick="sub()">Check requirements</button>
     <br><br>
 
     <input type="hidden" id="idealNitrogen" name="idealNitrogen" />
@@ -151,6 +159,14 @@
       </p>
 
       <p>
+        pH Check: <span id="pH"></span>
+      </p>
+
+      <p>
+        TDS Check: <span id="tds"></span>
+      </p>
+
+      <p>
         Nitrogen Fertilizer Requirement (46-0-0 fertilizer):
         <span id="displayNitrogenFertilizer"></span> kg
       </p>
@@ -171,6 +187,10 @@
       </p>
       <p>
         Potassium Fertilizer Cost: ₹<span id="displayTotalPotassiumCost"></span>
+      </p>
+
+      <p>
+        Estimated Seed Cost: ₹<span id="seedCost"></span>
       </p>
 
       <p>Estimated Cost: ₹<span id="displayTotalCost"></span></p>
