--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Khetguru</title>
+  <title>KhetGuru</title>
 </head>
 
 <body>
@@ -30,27 +30,27 @@
   </header>
   <h1 class="welcome"> . </h1>
   <div class="logo">
-    <h1>Welcome to Khetguru</h1>
+    <h1>Welcome to KhetGuru</h1>
     <h2>Please login or signup to continue</h2>
     <section class="main-stuff">
 
       <p>
-        Khet Guru is a revolutionary tool that puts the power of smart
+        KhetGuru is a revolutionary tool that puts the power of smart
         agriculture directly into the hands of farmers. Using soil fertility
-        data, Khet Guru provides farmers with the essential knowledge needed to
+        data, KhetGuru provides farmers with the essential knowledge needed to
         make informed decisions about crop selection, planting times, and
         fertilizer use.
       </p>
       <p>
-        No more guesswork. No more uncertainty. Khet Guru takes into account
+        No more guesswork. No more uncertainty. KhetGuru takes into account
         your location, the time of year, and the local climate, offering
         tailored recommendations for crops that are most likely to thrive in
-        your specific conditions. But it doesn't stop there. Khet Guru goes a
+        your specific conditions. But it doesn't stop there. KhetGuru goes a
         step further, calculating the precise amount of fertilizer you'll need
         and even estimating the associated costs.
       </p>
       <p>
-        With Khet Guru, you're not just farming; you're farming smart.
+        With KhetGuru, you're not just farming; you're farming smart.
       </p>
     </section>
   </div>
