--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -35,7 +35,7 @@
     <input type="text" id="email" name="email" class="form-control" readonly required />
     <br><br>
 
-    <!-- <label for="state">State:</label>
+    <label for="state">State:</label>
     <select name="state" id="state" class="form-control" required>
       <option id="" disabled selected>Select your state</option>
       <option id="Andhra Pradesh">Andhra Pradesh</option>
@@ -77,13 +77,9 @@
     </select>
     <br><br> -->
 
-    <!--<label for="date">Date:</label>
+    <label for="date">Date:</label>
     <input type="date" id="date" name="date">
     <br><br>
-
-    <label for="season">Season:</label>
-    <input name="season" id="season" class="form-control" required>
-    <br><br>-->
 
     <label for="season">Season:</label>
     <select name="season" id="season" class="form-control" required>
