--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -197,6 +197,10 @@
         for later access for users, but we store them in our backend)
       </p>
     </div>
+
+    <div id="governmentSchemes" style="display: none">
+      <p> After analysing your personal information, the following government schemes apply to you: </p>
+    </div>
   </form>
 
 </html>
