--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -198,7 +198,7 @@
       </p>
     </div>
 
-    <div id="governmentSchemes" style="display: none">
+    <div>
       <p> After analysing your personal information, the following government schemes apply to you: </p>
     </div>
   </form>
