--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <section class="main-stuff">
 
       <p>
-        KhetGuru is a revolutionary tool that puts the power of smart
-        agriculture directly into the hands of farmers. Using soil fertility
-        data, KhetGuru provides farmers with the essential knowledge needed to
-        make informed decisions about crop selection, planting times, and
-        fertilizer use.
+        KhetGuru App will be a pioneering agricultural project to transform 
+        farming practices through the integration of technology and community 
+        support. This innovative initiative combines soil sensors, data 
+        analytics, and a community-driven mobile application to optimise 
+        crop selection and promote knowledge sharing among farmers.
       </p>
       <p>
         No more guesswork. No more uncertainty. KhetGuru takes into account
