--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -75,10 +75,10 @@
       <option id="Uttarakhand">Uttarakhand</option>
       <option id="West Bengal">West Bengal</option>
     </select>
-    <br><br> -->
+    <br><br>
 
     <label for="date">Date:</label>
-    <input type="date" id="date" name="date">
+    <input type="text" id="date" name="date" readonly required>
     <br><br>
 
     <label for="season">Season:</label>
