Automatically shows season

--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -82,11 +82,7 @@
     <br><br>
 
     <label for="season">Season:</label>
-    <select name="season" id="season" class="form-control" required>
-      <option id="" disabled selected>Select cropping season</option>
-      <option id="rabi">Rabi</option>
-      <option id="kharif">Kharif</option>
-    </select>
+    <input name="season" id="season" required readonly>
     <br><br>
 
     <label for="landArea">Land area (in hectares):</label>
