--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
             <li><a href="/forum/">Khetu Forum</a></li>
           </ul>
         </li>
-        <li class="right"><a href="#">हिंदी में देखें</a></li>
+        <li class="right"><a id="hindiButton" href="#">हिंदी में देखें</a></li>
         <li class="right"><a data-netlify-identity-button></a></li>
       </ul>
     </nav>
   </header>
   <h1 class="welcome"> . </h1>
   <div class="logo">
-    <h1>Welcome to KhetGuru</h1>
-    <h2>Please login or signup to continue</h2>
+    <h1 id="heading1">Welcome to KhetGuru</h1>
+    <h2 id="heading2">Please login or signup to continue</h2>
     <section class="main-stuff">
 
-      <p>
+      <p id="para1">
         KhetGuru App will be a pioneering agricultural project to transform 
         farming practices through the integration of technology and community 
         support. This innovative initiative combines soil sensors, data 
         analytics, and a community-driven mobile application to optimise 
         crop selection and promote knowledge sharing among farmers.
       </p>
-      <p>
+      <p id="para2">
         No more guesswork. No more uncertainty. KhetGuru takes into account
         your location, the time of year, and the local climate, offering
         tailored recommendations for crops that are most likely to thrive in
@@ -49,7 +49,7 @@
         step further, calculating the precise amount of fertilizer you'll need
         and even estimating the associated costs.
       </p>
-      <p>
+      <p id="para3">
         With KhetGuru, you're not just farming; you're farming smart.
       </p>
     </section>
