--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KhetGuru</title>
+  <title id="title">KhetGuru</title>
 </head>
 
 <body>
   <header>
     <nav>
       <ul class="navul">
-        <li class="left"><a href="https://khetguru.netlify.app">Home</a></li>
+        <li class="left"><a id="home" href="https://khetguru.netlify.app">Home</a></li>
         <li class="left">
           <a id="tools-dropdown" style="cursor: pointer;">Tools</a>
           <ul id="tools-dropdown-content" class="dropdown-content">
-            <li><a href="/soilcalculator/">Soil Calculator</a></li>
-            <li><a href="/forum/">Khetu Forum</a></li>
+            <li><a id="soilcalculatorlink" href="/soilcalculator/">Soil Calculator</a></li>
+            <li><a id="forumlink" href="/forum/">Khetu Forum</a></li>
           </ul>
         </li>
         <li class="right"><a id="hindiButton" href="#">हिंदी में देखें</a></li>
-        <li class="right"><a data-netlify-identity-button></a></li>
+        <li class="right"><a id="log" data-netlify-identity-button></a></li>
       </ul>
     </nav>
   </header>
