Made code more readable

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </header>
   <h1 class="welcome"> . </h1>
   <div class="logo">
+    <img src="logo.png">
     <h1 id="heading1">Welcome to KhetGuru</h1>
     <h2 id="heading2">Please login or signup to continue</h2>
     <section class="main-stuff">
