--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="npkStyle.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Khetguru</title>
+  <title>KhetGuru</title>
 </head>
 
 <body>
