Removed netlify tag

--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -29,7 +29,7 @@
     </nav>
   </header>
   <h1>Soil Calculator</h1>
-  <form action="insert.php" method="POST" name="SoilSensorValues" netlify>
+  <form action="insert.php" method="POST" name="SoilSensorValues">
     <table>
 
       <label for="email">Email:</label>
